--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
     <title>Multigram</title>
   </head>
   <body>
-    <h1>Landing Page</h1>
+    <img
+      class="text-logo"
+      src="https://clipart.info/images/ccovers/1522452762Instagram-logo-png-text.png"
+      alt="Instagram logo"
+    />
+    <div class="inputSpace">
+      <input
+        type="text"
+        name="username"
+        id="username"
+        placeholder="Phone number, username or email"
+      />
+      <input
+        type="password"
+        name="password"
+        id="password"
+        placeholder="Password"
+      />
+    </div>
 
     <script src="script.js"></script>
   </body>
