Finished Log in page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <img
       class="text-logo"
-      src="https://clipart.info/images/ccovers/1522452762Instagram-logo-png-text.png"
+      src="/assets/images/textLogo.png"
       alt="Instagram logo"
     />
     <div class="inputSpace">
@@ -27,6 +27,9 @@
         placeholder="Password"
       />
     </div>
+    <a href="feed.html"><button class="loginBtn">Log in</button></a>
+    <!-- <button onclick="window.location.href='account.html'">Click me</button> -->
+    <!-- ^^ Another possible solution -->
 
     <script src="script.js"></script>
   </body>
