Class name change

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <img
-      class="text-logo"
+      class="logoLogin"
       src="/assets/images/textLogo.png"
       alt="Instagram logo"
     />
